# syncthing-merge

./: README.md  cabal.project  flake.nix  hie.yaml  justfile  syncthing-merge.cabal
app/: Main.hs
nix/: haskellDeps.nix  nixos-module.nix
syncthing-merge/: default.nix  syncthing-merge.cabal
syncthing-merge/app/: Main.hs  Secret.hs  Toml.hs
test/: merge  start
