cabal-version:      3.0
name:               syncthing-merge
version:            0.1
license:            GPL-3.0-only
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable syncthing-merge
    import:           warnings
    main-is:          Main.hs
    other-modules:
        Secret
        Toml
    build-depends:
        aeson,
        base ^>=4.19.2.0,
        bytestring,
        containers,
        deepseq,
        diagnostica,
        diagnostica-sage,
        directory,
        filepath,
        http-client,
        http-types,
        mtl,
        optparse-applicative,
        process,
        sage,
        text,
        time
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
